--- a/src/qtgui/dockprobe.ui
+++ b/src/qtgui/dockprobe.ui
@@ -71,6 +71,37 @@
       </property>
      </widget>
     </item>
+    <item row="1" column="0" colspan="4">
+     <widget class="CPlotter2" name="plot">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="toolTip">
+       <string>Audio spectrum</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
@@ -80,6 +111,12 @@
    <extends>QFrame</extends>
    <header>qtgui/plotter.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+      <class>CPlotter2</class>
+      <extends>QFrame</extends>
+      <header>qtgui/plotter2.h</header>
+      <container>1</container>
   </customwidget>
  </customwidgets>
  <resources>
