ui_builder: update demod_options layout

--- a/src/qtgui/demod_options.ui
+++ b/src/qtgui/demod_options.ui
@@ -17,8 +17,8 @@
    <iconset resource="../../resources/icons.qrc">
     <normaloff>:/icons/icons/signal.svg</normaloff>:/icons/icons/signal.svg</iconset>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
     <widget class="QStackedWidget" name="demodOptions">
      <property name="minimumSize">
       <size>
